package worldOfZuulGui.domain;

public enum Room {
    Entry,
    Kitchen,
    LivingRoom,
    Bedroom,
    BathRoom,
    Computer,
    Fridge,
    StartMenu,
    StartScreen,
    Tutorial,
    Tutorial_2,
    Tutorial_3,
    Tutorial_4,
    Tutorial_5,
    Tutorial_6,
    gameLost,
    gameWon;
}
